# fastapi-postgresql

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  robots.txt
.github/workflows/: docker-image.yml
app/: config.py  main.py
model/: keras_model_man.h5  keras_model_woman.h5  labels.txt
sql_app/: crud.py  database.py  models.py  schemas.py
templates/: index.html  result.html
